# sql-server-sentinel

./: .dockerignore  .env.example  .gitignore  .gitmessage  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: chaos_scenarios.yaml  jobs.yaml  sentinel.yaml  validation_rules.yaml
docs/: BEGINNERS_GUIDE.md  RUNBOOK.md
sentinel/: __init__.py
sentinel/api/: dependencies.py  main.py  schemas.py
sentinel/chaos/: engine.py  scenarios.py
sentinel/config/: loader.py  models.py
sentinel/core/: exceptions.py  logging.py
sentinel/db/: connection.py  queries.py
sentinel/governance/: __init__.py  catalog.py
sentinel/jobs/: runner.py
sentinel/monitor/: blocker_detector.py  health.py  healthcare.py  incident_manager.py
sentinel/remediation/: actions.py  engine.py
sentinel/validation/: engine.py  rules.py
sql/dmv/: active_queries.sql  blocking_chains.sql  connection_stats.sql  cpu_pressure.sql  memory_pressure.sql  tempdb_usage.sql  wait_stats.sql
sql/init/: 01_create_sentinel_schema.sql  02_create_sample_schema.sql  03_create_monitoring_procs.sql  04_create_remediation_procs.sql  05_seed_sample_data.sql  06_create_etl_procs.sql  07_create_healthcare_schema.sql  08_create_healthcare_star_schema.sql  09_create_governance_schema.sql  10_create_healthcare_etl_procs.sql  11_create_performance_objects.sql  12_seed_healthcare_data.sql  13_create_masking_procs.sql
tests/: conftest.py
tests/integration/: test_governance_api.py  test_health_api.py
tests/stress/: test_load.py
(+24 files in other folders)
